src/test/ui/index-help.stderr
error[E0277]: the trait bound `i32: std::slice::SliceIndex<[{integer}]>` is not satisfied
  --> $DIR/index-help.rs:3:5
   |
LL |     x[0i32]; //~ ERROR E0277
   |     ^^^^^^^ slice indices are of type `usize` or ranges of `usize`
   |
   = help: the trait `std::slice::SliceIndex<[{integer}]>` is not implemented for `i32`
   = note: required because of the requirements on the impl of `std::ops::Index<i32>` for `std::vec::Vec<{integer}>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
